<resources>
    <string name="app_name">Pix</string>
    <string name="images_could_not_be_loaded">Images could not be loaded</string>
    <string name="retry">Retry</string>
    <string name="comments">Comments</string>
    <string name="_1567">1567</string>
    <string name="downloads">Downloads</string>
    <string name="likes">Likes</string>
    <string name="large_image">Large Image</string>
    <string name="no_results_found_for_this_query">No images found for this query</string>
    <string name="search">search</string>
    <string name="cancel">Cancel</string>
    <string name="see_more_details">See more details</string>
    <string name="okay">Okay</string>
</resources>