<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.pix_details.PixDetailFragment">

    <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:contentDescription="@string/large_image"
            android:id="@+id/detail_image"
            android:src="@drawable/ic_downloads"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/list_details_title"
            android:id="@+id/user_name" />

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/tags"
            android:maxLines="10"
            android:ellipsize="end"
            android:textAppearance="@style/list_details_body"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/comments"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_comments" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textAppearance="@style/icon_detail_text"
                android:text="@string/_1567"
                android:layout_gravity="center_vertical"/>
            <ImageView
                android:layout_width="wrap_content"
                android:id="@+id/likes"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/likes"
                android:background="@drawable/ic_likes"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textAppearance="@style/icon_detail_text"
                android:text="@string/_1567"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>

            <ImageView
                android:layout_width="wrap_content"
                android:id="@+id/downloads"
                android:contentDescription="@string/downloads"
                android:layout_marginStart="20dp"
                android:background="@drawable/ic_downloads"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/icon_detail_text"
                android:text="@string/_1567"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>